--- a/tests/test_cases/2024/commands/7E0.0131.yaml
+++ b/tests/test_cases/2024/commands/7E0.0131.yaml
@@ -2,6 +2,414 @@ command_id: 7E0.0131
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80441310AB9
+  expected_values:
+    CLR_DIST: 2745
+- response: 7E80441310ABA
+  expected_values:
+    CLR_DIST: 2746
+- response: 7E80441310ABB
+  expected_values:
+    CLR_DIST: 2747
+- response: 7E80441310ABC
+  expected_values:
+    CLR_DIST: 2748
+- response: 7E80441310ABD
+  expected_values:
+    CLR_DIST: 2749
+- response: 7E80441310ABE
+  expected_values:
+    CLR_DIST: 2750
+- response: 7E80441310ABF
+  expected_values:
+    CLR_DIST: 2751
+- response: 7E80441310AC0
+  expected_values:
+    CLR_DIST: 2752
+- response: 7E80441310AC1
+  expected_values:
+    CLR_DIST: 2753
+- response: 7E80441310AC2
+  expected_values:
+    CLR_DIST: 2754
+- response: 7E80441310AC3
+  expected_values:
+    CLR_DIST: 2755
+- response: 7E80441310AC4
+  expected_values:
+    CLR_DIST: 2756
+- response: 7E80441310AC5
+  expected_values:
+    CLR_DIST: 2757
+- response: 7E80441310AC6
+  expected_values:
+    CLR_DIST: 2758
+- response: 7E80441310AC7
+  expected_values:
+    CLR_DIST: 2759
+- response: 7E80441310AC8
+  expected_values:
+    CLR_DIST: 2760
+- response: 7E80441310AC9
+  expected_values:
+    CLR_DIST: 2761
+- response: 7E80441310ACA
+  expected_values:
+    CLR_DIST: 2762
+- response: 7E80441310ACB
+  expected_values:
+    CLR_DIST: 2763
+- response: 7E80441310ACC
+  expected_values:
+    CLR_DIST: 2764
+- response: 7E80441310ACD
+  expected_values:
+    CLR_DIST: 2765
+- response: 7E80441310ACE
+  expected_values:
+    CLR_DIST: 2766
+- response: 7E80441310ACF
+  expected_values:
+    CLR_DIST: 2767
+- response: 7E80441310AD0
+  expected_values:
+    CLR_DIST: 2768
+- response: 7E80441310AD1
+  expected_values:
+    CLR_DIST: 2769
+- response: 7E80441310AD2
+  expected_values:
+    CLR_DIST: 2770
+- response: 7E80441310AD3
+  expected_values:
+    CLR_DIST: 2771
+- response: 7E80441310AD4
+  expected_values:
+    CLR_DIST: 2772
+- response: 7E80441310AD5
+  expected_values:
+    CLR_DIST: 2773
+- response: 7E80441310AD6
+  expected_values:
+    CLR_DIST: 2774
+- response: 7E80441310AF2
+  expected_values:
+    CLR_DIST: 2802
+- response: 7E80441310AF3
+  expected_values:
+    CLR_DIST: 2803
+- response: 7E80441310AF4
+  expected_values:
+    CLR_DIST: 2804
+- response: 7E80441310AF5
+  expected_values:
+    CLR_DIST: 2805
+- response: 7E80441310AF6
+  expected_values:
+    CLR_DIST: 2806
+- response: 7E80441310AF7
+  expected_values:
+    CLR_DIST: 2807
+- response: 7E80441310AF8
+  expected_values:
+    CLR_DIST: 2808
+- response: 7E80441310AF9
+  expected_values:
+    CLR_DIST: 2809
+- response: 7E80441310AFA
+  expected_values:
+    CLR_DIST: 2810
+- response: 7E80441310AFB
+  expected_values:
+    CLR_DIST: 2811
+- response: 7E80441310AFC
+  expected_values:
+    CLR_DIST: 2812
+- response: 7E80441310AFD
+  expected_values:
+    CLR_DIST: 2813
+- response: 7E80441310AFE
+  expected_values:
+    CLR_DIST: 2814
+- response: 7E80441310AFF
+  expected_values:
+    CLR_DIST: 2815
+- response: 7E80441310B00
+  expected_values:
+    CLR_DIST: 2816
+- response: 7E80441310B01
+  expected_values:
+    CLR_DIST: 2817
+- response: 7E80441310B02
+  expected_values:
+    CLR_DIST: 2818
+- response: 7E80441310B03
+  expected_values:
+    CLR_DIST: 2819
+- response: 7E80441310B04
+  expected_values:
+    CLR_DIST: 2820
+- response: 7E80441310B05
+  expected_values:
+    CLR_DIST: 2821
+- response: 7E80441310B06
+  expected_values:
+    CLR_DIST: 2822
+- response: 7E80441310B07
+  expected_values:
+    CLR_DIST: 2823
+- response: 7E80441310B08
+  expected_values:
+    CLR_DIST: 2824
+- response: 7E80441310B09
+  expected_values:
+    CLR_DIST: 2825
+- response: 7E80441310B0A
+  expected_values:
+    CLR_DIST: 2826
+- response: 7E80441310B0B
+  expected_values:
+    CLR_DIST: 2827
+- response: 7E80441310B0C
+  expected_values:
+    CLR_DIST: 2828
+- response: 7E80441310B0D
+  expected_values:
+    CLR_DIST: 2829
+- response: 7E80441310B0E
+  expected_values:
+    CLR_DIST: 2830
+- response: 7E80441310B0F
+  expected_values:
+    CLR_DIST: 2831
+- response: 7E80441310B10
+  expected_values:
+    CLR_DIST: 2832
+- response: 7E80441310B11
+  expected_values:
+    CLR_DIST: 2833
+- response: 7E80441310B12
+  expected_values:
+    CLR_DIST: 2834
+- response: 7E80441310B13
+  expected_values:
+    CLR_DIST: 2835
+- response: 7E80441310B14
+  expected_values:
+    CLR_DIST: 2836
+- response: 7E80441310B15
+  expected_values:
+    CLR_DIST: 2837
+- response: 7E80441310B16
+  expected_values:
+    CLR_DIST: 2838
+- response: 7E80441310B17
+  expected_values:
+    CLR_DIST: 2839
+- response: 7E80441310B18
+  expected_values:
+    CLR_DIST: 2840
+- response: 7E80441310B19
+  expected_values:
+    CLR_DIST: 2841
+- response: 7E80441310B1A
+  expected_values:
+    CLR_DIST: 2842
+- response: 7E80441310B1B
+  expected_values:
+    CLR_DIST: 2843
+- response: 7E80441310B1C
+  expected_values:
+    CLR_DIST: 2844
+- response: 7E80441310B1D
+  expected_values:
+    CLR_DIST: 2845
+- response: 7E80441310B1E
+  expected_values:
+    CLR_DIST: 2846
+- response: 7E80441310B1F
+  expected_values:
+    CLR_DIST: 2847
 - response: 7E804413122B8
   expected_values:
     CLR_DIST: 8888
+- response: 7E804413122F3
+  expected_values:
+    CLR_DIST: 8947
+- response: 7E804413122F4
+  expected_values:
+    CLR_DIST: 8948
+- response: 7E804413122F5
+  expected_values:
+    CLR_DIST: 8949
+- response: 7E804413122F6
+  expected_values:
+    CLR_DIST: 8950
+- response: 7E804413122F7
+  expected_values:
+    CLR_DIST: 8951
+- response: 7E804413122F8
+  expected_values:
+    CLR_DIST: 8952
+- response: 7E804413122F9
+  expected_values:
+    CLR_DIST: 8953
+- response: 7E804413122FA
+  expected_values:
+    CLR_DIST: 8954
+- response: 7E804413122FB
+  expected_values:
+    CLR_DIST: 8955
+- response: 7E804413122FC
+  expected_values:
+    CLR_DIST: 8956
+- response: 7E804413122FD
+  expected_values:
+    CLR_DIST: 8957
+- response: 7E804413122FE
+  expected_values:
+    CLR_DIST: 8958
+- response: 7E804413122FF
+  expected_values:
+    CLR_DIST: 8959
+- response: '7E80441312300'
+  expected_values:
+    CLR_DIST: 8960
+- response: '7E80441312301'
+  expected_values:
+    CLR_DIST: 8961
+- response: '7E80441312302'
+  expected_values:
+    CLR_DIST: 8962
+- response: '7E80441312303'
+  expected_values:
+    CLR_DIST: 8963
+- response: '7E80441312304'
+  expected_values:
+    CLR_DIST: 8964
+- response: '7E80441312315'
+  expected_values:
+    CLR_DIST: 8981
+- response: '7E80441312316'
+  expected_values:
+    CLR_DIST: 8982
+- response: '7E80441312317'
+  expected_values:
+    CLR_DIST: 8983
+- response: 7E8044131231D
+  expected_values:
+    CLR_DIST: 8989
+- response: 7E8044131231E
+  expected_values:
+    CLR_DIST: 8990
+- response: 7E8044131231F
+  expected_values:
+    CLR_DIST: 8991
+- response: '7E80441312320'
+  expected_values:
+    CLR_DIST: 8992
+- response: '7E80441312321'
+  expected_values:
+    CLR_DIST: 8993
+- response: '7E80441312322'
+  expected_values:
+    CLR_DIST: 8994
+- response: '7E80441312323'
+  expected_values:
+    CLR_DIST: 8995
+- response: '7E80441312324'
+  expected_values:
+    CLR_DIST: 8996
+- response: '7E80441312325'
+  expected_values:
+    CLR_DIST: 8997
+- response: '7E80441312326'
+  expected_values:
+    CLR_DIST: 8998
+- response: '7E80441312327'
+  expected_values:
+    CLR_DIST: 8999
+- response: '7E80441312328'
+  expected_values:
+    CLR_DIST: 9000
+- response: '7E80441312329'
+  expected_values:
+    CLR_DIST: 9001
+- response: 7E8044131232A
+  expected_values:
+    CLR_DIST: 9002
+- response: 7E8044131232B
+  expected_values:
+    CLR_DIST: 9003
+- response: 7E8044131232C
+  expected_values:
+    CLR_DIST: 9004
+- response: 7E8044131232D
+  expected_values:
+    CLR_DIST: 9005
+- response: 7E8044131232E
+  expected_values:
+    CLR_DIST: 9006
+- response: 7E8044131232F
+  expected_values:
+    CLR_DIST: 9007
+- response: '7E80441312330'
+  expected_values:
+    CLR_DIST: 9008
+- response: '7E80441312331'
+  expected_values:
+    CLR_DIST: 9009
+- response: '7E80441312332'
+  expected_values:
+    CLR_DIST: 9010
+- response: '7E80441312333'
+  expected_values:
+    CLR_DIST: 9011
+- response: '7E80441312334'
+  expected_values:
+    CLR_DIST: 9012
+- response: '7E80441312335'
+  expected_values:
+    CLR_DIST: 9013
+- response: '7E80441312336'
+  expected_values:
+    CLR_DIST: 9014
+- response: '7E80441312337'
+  expected_values:
+    CLR_DIST: 9015
+- response: '7E80441312338'
+  expected_values:
+    CLR_DIST: 9016
+- response: '7E80441312345'
+  expected_values:
+    CLR_DIST: 9029
+- response: '7E80441312346'
+  expected_values:
+    CLR_DIST: 9030
+- response: '7E80441312347'
+  expected_values:
+    CLR_DIST: 9031
+- response: '7E80441312348'
+  expected_values:
+    CLR_DIST: 9032
+- response: '7E80441312349'
+  expected_values:
+    CLR_DIST: 9033
+- response: 7E8044131234A
+  expected_values:
+    CLR_DIST: 9034
+- response: 7E8044131234B
+  expected_values:
+    CLR_DIST: 9035
+- response: 7E8044131234C
+  expected_values:
+    CLR_DIST: 9036
+- response: 7E8044131234D
+  expected_values:
+    CLR_DIST: 9037
+- response: 7E8044131234E
+  expected_values:
+    CLR_DIST: 9038
+- response: '7E80441312352'
+  expected_values:
+    CLR_DIST: 9042
