--- a/tests/test_cases/2024/commands/7E0.0142.yaml
+++ b/tests/test_cases/2024/commands/7E0.0142.yaml
@@ -2,9 +2,303 @@ command_id: 7E0.0142
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80441422E28
+  expected_values:
+    VPWR: 11.816
+- response: 7E80441422E3B
+  expected_values:
+    VPWR: 11.835
+- response: 7E80441422E4F
+  expected_values:
+    VPWR: 11.855
+- response: 7E80441422E63
+  expected_values:
+    VPWR: 11.875
+- response: 7E80441422E9D
+  expected_values:
+    VPWR: 11.933
 - response: 7E80441422EB1
   expected_values:
     VPWR: 11.953
+- response: 7E80441422EC4
+  expected_values:
+    VPWR: 11.972
+- response: 7E80441422ED8
+  expected_values:
+    VPWR: 11.992
+- response: 7E80441422EFF
+  expected_values:
+    VPWR: 12.031
+- response: 7E80441422F12
+  expected_values:
+    VPWR: 12.05
+- response: 7E80441422F26
+  expected_values:
+    VPWR: 12.07
+- response: 7E80441422F39
+  expected_values:
+    VPWR: 12.089
+- response: 7E80441422F4D
+  expected_values:
+    VPWR: 12.109
+- response: 7E80441422F60
+  expected_values:
+    VPWR: 12.128
+- response: 7E80441422F74
+  expected_values:
+    VPWR: 12.148
+- response: 7E80441422F87
+  expected_values:
+    VPWR: 12.167
+- response: 7E80441422F9B
+  expected_values:
+    VPWR: 12.187
+- response: 7E80441422FAF
+  expected_values:
+    VPWR: 12.207
+- response: 7E80441422FC2
+  expected_values:
+    VPWR: 12.226
+- response: 7E80441422FD6
+  expected_values:
+    VPWR: 12.246
+- response: 7E80441422FE9
+  expected_values:
+    VPWR: 12.265
+- response: 7E80441422FFD
+  expected_values:
+    VPWR: 12.285
+- response: '7E80441423010'
+  expected_values:
+    VPWR: 12.304
+- response: '7E80441423024'
+  expected_values:
+    VPWR: 12.324
+- response: '7E80441423037'
+  expected_values:
+    VPWR: 12.343
+- response: 7E8044142304B
+  expected_values:
+    VPWR: 12.363
+- response: 7E8044142305E
+  expected_values:
+    VPWR: 12.382
+- response: '7E80441423072'
+  expected_values:
+    VPWR: 12.402
+- response: '7E80441423085'
+  expected_values:
+    VPWR: 12.421
+- response: 7E804414230AC
+  expected_values:
+    VPWR: 12.46
+- response: 7E804414230FB
+  expected_values:
+    VPWR: 12.539
+- response: 7E8044142310E
+  expected_values:
+    VPWR: 12.558
+- response: '7E80441423149'
+  expected_values:
+    VPWR: 12.617
+- response: 7E804414232BC
+  expected_values:
+    VPWR: 12.988
+- response: 7E804414232F6
+  expected_values:
+    VPWR: 13.046
+- response: 7E8044142330A
+  expected_values:
+    VPWR: 13.066
+- response: 7E8044142331D
+  expected_values:
+    VPWR: 13.085
+- response: '7E80441423331'
+  expected_values:
+    VPWR: 13.105
+- response: '7E80441423345'
+  expected_values:
+    VPWR: 13.125
+- response: '7E80441423358'
+  expected_values:
+    VPWR: 13.144
+- response: 7E8044142336C
+  expected_values:
+    VPWR: 13.164
+- response: 7E8044142337F
+  expected_values:
+    VPWR: 13.183
+- response: '7E80441423393'
+  expected_values:
+    VPWR: 13.203
+- response: 7E804414233A6
+  expected_values:
+    VPWR: 13.222
+- response: 7E804414233BA
+  expected_values:
+    VPWR: 13.242
+- response: 7E804414233CD
+  expected_values:
+    VPWR: 13.261
+- response: 7E804414233E1
+  expected_values:
+    VPWR: 13.281
+- response: 7E804414233F4
+  expected_values:
+    VPWR: 13.3
+- response: '7E80441423408'
+  expected_values:
+    VPWR: 13.32
+- response: 7E8044142341B
+  expected_values:
+    VPWR: 13.339
+- response: '7E80441423442'
+  expected_values:
+    VPWR: 13.378
+- response: 7E804414234CB
+  expected_values:
+    VPWR: 13.515
+- response: '7E80441423519'
+  expected_values:
+    VPWR: 13.593
+- response: 7E804414235A2
+  expected_values:
+    VPWR: 13.73
+- response: 7E804414235B6
+  expected_values:
+    VPWR: 13.75
+- response: 7E804414235C9
+  expected_values:
+    VPWR: 13.769
+- response: 7E804414235DD
+  expected_values:
+    VPWR: 13.789
+- response: '7E80441423604'
+  expected_values:
+    VPWR: 13.828
+- response: 7E8044142362B
+  expected_values:
+    VPWR: 13.867
+- response: 7E8044142363E
+  expected_values:
+    VPWR: 13.886
+- response: '7E80441423652'
+  expected_values:
+    VPWR: 13.906
+- response: '7E80441423665'
+  expected_values:
+    VPWR: 13.925
+- response: '7E80441423679'
+  expected_values:
+    VPWR: 13.945
+- response: 7E8044142368C
+  expected_values:
+    VPWR: 13.964
+- response: 7E804414236A0
+  expected_values:
+    VPWR: 13.984
+- response: 7E804414236B3
+  expected_values:
+    VPWR: 14.003
+- response: 7E804414236C7
+  expected_values:
+    VPWR: 14.023
+- response: 7E804414236EE
+  expected_values:
+    VPWR: 14.062
+- response: '7E80441423729'
+  expected_values:
+    VPWR: 14.121
+- response: 7E8044142379E
+  expected_values:
+    VPWR: 14.238
+- response: 7E804414237C5
+  expected_values:
+    VPWR: 14.277
+- response: '7E80441423861'
+  expected_values:
+    VPWR: 14.433
+- response: '7E80441423888'
+  expected_values:
+    VPWR: 14.472
+- response: 7E8044142389C
+  expected_values:
+    VPWR: 14.492
+- response: 7E804414238AF
+  expected_values:
+    VPWR: 14.511
+- response: 7E804414238C3
+  expected_values:
+    VPWR: 14.531
+- response: 7E804414238D6
+  expected_values:
+    VPWR: 14.55
+- response: 7E804414238EA
+  expected_values:
+    VPWR: 14.57
+- response: 7E804414238FD
+  expected_values:
+    VPWR: 14.589
+- response: '7E80441423911'
+  expected_values:
+    VPWR: 14.609
+- response: '7E80441423924'
+  expected_values:
+    VPWR: 14.628
+- response: '7E80441423938'
+  expected_values:
+    VPWR: 14.648
+- response: 7E8044142394B
+  expected_values:
+    VPWR: 14.667
+- response: 7E8044142395F
+  expected_values:
+    VPWR: 14.687
+- response: '7E80441423973'
+  expected_values:
+    VPWR: 14.707
+- response: 7E8044142399A
+  expected_values:
+    VPWR: 14.746
+- response: 7E804414239AD
+  expected_values:
+    VPWR: 14.765
+- response: 7E804414239C1
+  expected_values:
+    VPWR: 14.785
+- response: 7E804414239D4
+  expected_values:
+    VPWR: 14.804
+- response: 7E804414239E8
+  expected_values:
+    VPWR: 14.824
+- response: 7E804414239FB
+  expected_values:
+    VPWR: 14.843
+- response: 7E80441423A0F
+  expected_values:
+    VPWR: 14.863
+- response: 7E80441423A22
+  expected_values:
+    VPWR: 14.882
+- response: 7E80441423A36
+  expected_values:
+    VPWR: 14.902
+- response: 7E80441423A49
+  expected_values:
+    VPWR: 14.921
+- response: 7E80441423A84
+  expected_values:
+    VPWR: 14.98
+- response: 7E80441423AAB
+  expected_values:
+    VPWR: 15.019
+- response: 7E80441423ABF
+  expected_values:
+    VPWR: 15.039
+- response: 7E80441423B95
+  expected_values:
+    VPWR: 15.253
 - response: 7EC0441422E8A
   expected_values:
     VPWR: 11.914
