--- a/tests/test_cases/2024/commands/7E0.0142.yaml
+++ b/tests/test_cases/2024/commands/7E0.0142.yaml
@@ -206,18 +206,48 @@ test_cases:
 - response: 7E804414236EE
   expected_values:
     VPWR: 14.062
+- response: '7E80441423702'
+  expected_values:
+    VPWR: 14.082
 - response: '7E80441423729'
   expected_values:
     VPWR: 14.121
+- response: 7E8044142373C
+  expected_values:
+    VPWR: 14.14
+- response: '7E80441423750'
+  expected_values:
+    VPWR: 14.16
+- response: '7E80441423763'
+  expected_values:
+    VPWR: 14.179
+- response: '7E80441423777'
+  expected_values:
+    VPWR: 14.199
+- response: 7E8044142378A
+  expected_values:
+    VPWR: 14.218
 - response: 7E8044142379E
   expected_values:
     VPWR: 14.238
+- response: 7E804414237B1
+  expected_values:
+    VPWR: 14.257
 - response: 7E804414237C5
   expected_values:
     VPWR: 14.277
+- response: 7E804414237EC
+  expected_values:
+    VPWR: 14.316
+- response: 7E804414237FF
+  expected_values:
+    VPWR: 14.335
 - response: '7E80441423861'
   expected_values:
     VPWR: 14.433
+- response: '7E80441423875'
+  expected_values:
+    VPWR: 14.453
 - response: '7E80441423888'
   expected_values:
     VPWR: 14.472
@@ -257,6 +287,9 @@ test_cases:
 - response: '7E80441423973'
   expected_values:
     VPWR: 14.707
+- response: '7E80441423986'
+  expected_values:
+    VPWR: 14.726
 - response: 7E8044142399A
   expected_values:
     VPWR: 14.746
